css/islandora_muni_template.css
/* ... */
div.region-header {
	margin-top: 1rem;
}

a.site-branding__logo img {
	height: 68px;
}

div.site-branding__text {
	display: none;
}

.region-header, .region-header a, .region-header li a.is-active, .region-header .site-branding__text, .region-header .site-branding, .region-header .site-branding__text a, .region-header .site-branding a, .region-secondary-menu .menu-item a, .region-secondary-menu .menu-item a.is-active {
    color: #0000DC;
    text-decoration: none;
}

.region-header .block:not(.site-branding) {
	margin: 0;
}

.region-header .site-branding, .region-header .block {
        float: none;
}

div.region-header {
        display: flex;
        align-items: stretch;
        max-width: 1170px;
        flex-wrap: wrap;
}

#block-islandora-muni-sitelogo,
#block-sitelogo {
        flex-grow: 1;
}

div.region-header div.views-exposed-form {
        clear: none;
        float: none;
}

div.region-header h2 {
        display: none;
}


div.region-header form,
div.region-header div.form--inline {
	display: flex;
	margin-top: 0;
}

div.region-header div.form-item {
	margin: 0;
}

div.region-header div.form-actions { 
	padding: 0;
	margin: 0;
}

div.region-header input.button {
	border: 1px solid #999;
	border-left: none;
	border-radius: 0;
	color: white;
	background-color: white;
	background-image: url('/themes/custom/islandora_muni/images/magnifier-blue-sm.png');
	background-repeat: no-repeat;
	background-position: center;
	width: 2.2rem;
	text-align: left;
	box-shadow: none;
  color: transparent;
}

div.region-header input.form-text {
        border: 1px solid #999;
	border-right: none;
        width: 192px;
        font-size: 1.1rem;
}

div.region-header input.button,
div.region-header input.form-text {
	height: 2.5rem;	
	margin: 0;
	outline: 0;
	padding: .3rem;
}

#edit-reset,
#edit-reset--2,
#edit-reset--3,
#edit-reset--4 {
	display: none;
}

#block-islandora-muni-languageswitcher,
#block-languageswitcher {
	clear: none;
	float: none;
	padding-left: 1rem;
	padding-top: .3rem;
}


#block-islandora-muni-languageswitcher ul.links,
#block-languageswitcher ul.links {
	font-size: 1.3rem;
}


#block-islandora-muni-languageswitcher li.is-active,
#block-languageswitcher li.is-active {
	display: none;
}	



/* menu */
/*
div.block-superfish a.menu-toggle,
#block-islandora-muni-main-menu a.menu-toggle {
	visibility: hidden;
	position: relative;
	word-spacing: -999px;
    	letter-spacing: -999px;
	margin-bottom: 1rem;
}

div.block-superfish a.menu-toggle::after,
#block-islandora-muni-main-menu a.menu-toggle::after {
	visibility: visible;
	position: absolute;
	left: 15px;
	word-spacing: normal;
	letter-spacing: normal;
	width: 90%;
	font-weight: bold;
	font-size: 1.3rem;
	color: #555;
	content: "\2630";
}
*/

ul.sf-menu .sf-sub-indicator {
	overflow: none;
	opacity: 1;
	font-size: small;
	top: 60%;
	width: 20px;
	right: inherit;
}

.sfHover,
ul.sf-menu.sf-style-default li li a:hover,
ul.sf-menu.sf-style-default li a:hover,
ul.sf-menu.sf-style-default li:hover a,
ul.sf-menu.sf-style-default li:hover, 
ul.sf-menu.sf-style-default li li:hover a,
ul.sf-menu.sf-style-default li li:hover,
ul.sf-menu.sf-style-default li li a,
ul.sf-menu.sf-style-default li li,
ul.sf-menu.sf-style-default li a,
ul.sf-menu.sf-style-default li {
  border: none;
  background-color: white;
  background: none;
  width: auto;
  color: #333;
}


ul.sf-menu.sf-style-default a,
ul.sf-menu.sf-style-default a:visited,
ul.sf-menu.sf-style-default a:hover,
ul.sf-menu.sf-style-default a.is-active {
  padding-bottom: 0;
  padding-top: 0;
  padding-left: 0;
  background: none;
}



ul.sf-menu.sf-style-default span.nolink:hover,
ul.sf-menu.sf-style-default span.nolink,
ul.sf-menu a, ul.sf-menu span.nolink {
	padding-bottom: 0;
  padding-top: 0;
  padding-left: 0;
	position: inherit;
  color: #333;
  padding-top: 0;
  padding-bottom: 0;
  background: none;
}


ul.sf-menu.sf-style-default a.is-active {
  color: black;
  background-color: white;
}

ul.sf-menu li.sf-depth-1.menuparent ul {
	/*
	border-top: 2px solid;
	border-image: linear-gradient(to left, grey 50%, transparent 50%) 100% 1;
	border-left: 2px solid grey;
	border-right: 2px solid grey;
	border-bottom: 2px solid grey;*/
	border: #DCDCDC solid 2px;
	border-top: white solid 2px;
	padding: .5rem;
	background-color: white;
	width: auto;
	margin-top: -5px;
}

ul.sf-menu li.sf-depth-1 a {
  padding: 0;
}

ul.sf-menu li.sf-depth-2.menuparent ul {
  border-top: #DCDCDC solid 2px;
}

.region-primary-menu .menu a.sf-depth-3::before,
.region-primary-menu .menu span.sf-depth-2::before,
.region-primary-menu .menu a.sf-depth-2::before {
  content: "\02C3\00a0\00a0\00a0"; /* bullet point arrow */
  color: grey;
  font-size: 0.8rem;
}

ul.sf-menu li.sf-depth-3,
ul.sf-menu li.sf-depth-2 {
	padding-bottom: 1rem;
}

ul.sf-menu li.sf-depth-2 span.sf-depth-2,
ul.sf-menu li.sf-depth-3 a.sf-depth-3,
ul.sf-menu li.sf-depth-2 a.sf-depth-2 {
	font-size: 1.1rem;
}

ul.sf-menu li.sf-depth-2 span span.sf-sub-indicator {
  display: none;
}

li.sf-depth-2 > span.sf-depth-2 {
  color: #333;
  font-size: 1.1rem;
}

ul.sf-menu.sf-horizontal.sf-shadow ul {
	box-shadow: none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
}

.region-primary-menu .menu {
	font-size: inherit;
	white-space: nowrap;
}

.region-primary-menu .block-superfish ul.menu,
.region-primary-menu .block-menu ul.menu {
	margin: .8rem 15px;
	padding: 0;
	list-style: none;
	display: flex;
}

.region-primary-menu .block-menu .menu {
	font-size: inherit;
}

@media (min-width: 901px) {
  .region-primary-menu .menu-item, body:not(:target) .region-primary-menu .menu-item {
    padding-right: 2rem;
  }

  ul.sf-menu.sf-style-default a, ul.sf-menu.sf-style-default a:visited {
    color: #333;
  }
}


.region-primary-menu ul.menu > li > span,
.region-primary-menu ul.menu > li {
	padding-right: 2rem;
	float: none;
	overflow: inherit;
	margin: 0;
	display: inline-block;
}

.region-primary-menu ul.menu > li.menuparent {
	padding-right: 1.4rem;
}
/* ... */

